# gfs

./: .gitmodules  package.json  vite.config.ts
.github/workflows/: build.yml  debug.yml  test.yml
test/: pagefind-index.ts
unpack/: pyproject.toml
unpack/gf-data-rus/asset/avgtxt/startavg/: start0.txt  start1.txt  start10.txt  start11.txt  start2.txt  start3.txt  start4.txt  start5.txt  start6.txt  start7.txt  start8.txt  start9.txt
unpack/src/gfunpack/: __main__.py  audio.py  backgrounds.py  chapters.py  characters.py  manual_chapters.py  mapper.py  prefabs.py  stories.py  utils.py
unpack/tests/: test_audio.py  test_backgrounds.py  test_characters.py  test_stories.py
