[project]
name = "gfUnpack"
version = "0.1.0"
description = "Unpacks character sprites from gf as well as their path id indices."
dependencies = [
    "UnityPy>=1.10.3",
    "tqdm>=4.66.1",
    "hjson>=3.1.0",
    "pillow==10.3.0",  # Фиксированная версия
]
requires-python = ">=3.11,<3.13"  # Ограничьте версию Python
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend", "setuptools>=65.5.0"]  # Добавьте setuptools
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
    "notebook>=7.0.4",
]